Use OutDir in CodeGenDir

--- a/UAssetAPI-DNNE/UAssetAPI-DNNE.csproj
+++ b/UAssetAPI-DNNE/UAssetAPI-DNNE.csproj
@@ -89,7 +89,7 @@
         <OutFuckingDir>$(OutDir)</OutFuckingDir>
     </PropertyGroup>
     <PropertyGroup>
-        <CodeGenDir>$(OutFuckingDir)$(DnneNativeBinaryName)/</CodeGenDir>
+        <CodeGenDir>$(OutDir)$(DnneNativeBinaryName)/</CodeGenDir>
     </PropertyGroup>
 
     <PropertyGroup>
