Revert "Use OutDir in CodeGenDir"
This reverts commit 0c95e9dedeaf92e9eb7e46ef75454e797d67f8fa.

--- a/UAssetAPI-DNNE/UAssetAPI-DNNE.csproj
+++ b/UAssetAPI-DNNE/UAssetAPI-DNNE.csproj
@@ -89,7 +89,7 @@
         <OutFuckingDir>$(OutDir)</OutFuckingDir>
     </PropertyGroup>
     <PropertyGroup>
-        <CodeGenDir>$(OutDir)$(DnneNativeBinaryName)/</CodeGenDir>
+        <CodeGenDir>$(OutFuckingDir)$(DnneNativeBinaryName)/</CodeGenDir>
     </PropertyGroup>
 
     <PropertyGroup>
