--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -17,7 +17,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # TODO: presets?
+        # TODO: USE PRESETS!!!
+        configuration: [ "Debug", "Release" ]
         os: [ "windows-latest", "ubuntu-latest" ]
 
     runs-on: ${{ matrix.os }}
@@ -37,3 +38,16 @@ jobs:
         run: dotnet --version
 
       - run: cmake --version
+
+      - name: Configure CMake
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{ matrix.configuration }}
+
+      - name: Build
+        run: cmake --build ${{github.workspace}}/build --config ${{ matrix.configuration }}
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: UAssetAPI-DNNE-cmake-build-${{ matrix.os }}-${{ matrix.configuration }}
+          path: ${{github.workspace}}/build
