--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -43,7 +43,7 @@ jobs:
       - if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
           which msbuild
-          find / -type f -executable -name "*msbuild*"
+          find / -type f -executable -name "*msbuild*" 2>/dev/null
 
       # TODO: maybe this is a bit lazy?
       - name: Install latest CMake
