--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -42,8 +42,7 @@ jobs:
 
       - if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
-          which msbuild
-          find / -type f -executable -name "*msbuild*" 2>/dev/null || true
+          find / -type f -executable -name "*platform.c" 2>/dev/null || true
 
       # TODO: maybe this is a bit lazy?
       - name: Install latest CMake
