--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -17,7 +17,13 @@
     </PropertyGroup>
 
     <PropertyGroup>
+        <!-- TODO: misleading name. Use DNNE's platform.c file. -->
         <EmitDnnePlatformSourceCToOutDir>false</EmitDnnePlatformSourceCToOutDir>
+
+        <!-- TODO: misleading name. Use DNNE's platform_v4.cpp file. -->
         <EmitDnnePlatformSourceCPPToOutDir>false</EmitDnnePlatformSourceCPPToOutDir>
+
+        <!-- If true, CodeGen tool generates CPP code instead of C code. -->
+        <GenerateCPP>false</GenerateCPP>
     </PropertyGroup>
 </Project>
