--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -40,6 +40,10 @@ jobs:
       - name: Setup MSVC dev env
         uses: ilammy/msvc-dev-cmd@v1
 
+      - if: ${{ matrix.os == 'ubuntu-latest' }}
+        run: |
+          find ~ -type f -executable -name "*platform.c" 2>/dev/null || true
+
       # TODO: maybe this is a bit lazy?
       - name: Install latest CMake
         run: pip install --upgrade cmake
